// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditPost component renders a "post_type" dropdown menu 1`] = `
<select
  aria-label="Select your post type"
  id="post_type"
  name="post_type"
  onChange={[Function]}
  required={true}
>
  <option
    value="Text"
  >
    Text
  </option>
  <option
    value="Image"
  >
    Image
  </option>
  <option
    value="Video"
  >
    Video
  </option>
</select>
`;

exports[`EditPost component renders a EditPost by default 1`] = `
<form
  className="AddPostForm"
  onSubmit={[Function]}
>
  <div
    className="form-title"
  >
    <h2>
      Edit Post
    </h2>
  </div>
  <div
    className="message"
  >
    <p />
  </div>
  <div
    className="select"
  >
    <label
      htmlFor="post_type"
    >
      Post Type
    </label>
    <select
      aria-label="Select your post type"
      id="post_type"
      name="post_type"
      onChange={[Function]}
      required={true}
    >
      <option
        value="Text"
      >
        Text
      </option>
      <option
        value="Image"
      >
        Image
      </option>
      <option
        value="Video"
      >
        Video
      </option>
    </select>
  </div>
  <div
    className="form-fields"
  >
    <label
      htmlFor="title"
    >
      Post Title
    </label>
    <input
      id="title"
      name="title"
      placeholder="Post Title"
      type="text"
    />
    <div
      className="add-post-fields"
    >
      <label
        htmlFor="text_title"
      >
        Headline
      </label>
      <input
        aria-label="Text Headline"
        id="text_title"
        name="text_title"
        placeholder="Headline"
        type="text"
      />
      <label
        htmlFor="text_content"
      >
        Body
      </label>
      <textarea
        aria-label="Text Body"
        id="text_content"
        name="text_content"
        type="text"
      />
    </div>
  </div>
  <button
    aria-label="Submit Form"
    className="form-submit"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`EditPost component renders a form 1`] = `
<form
  className="AddPostForm"
  onSubmit={[Function]}
>
  <div
    className="form-title"
  >
    <h2>
      Edit Post
    </h2>
  </div>
  <div
    className="message"
  >
    <p />
  </div>
  <div
    className="select"
  >
    <label
      htmlFor="post_type"
    >
      Post Type
    </label>
    <select
      aria-label="Select your post type"
      id="post_type"
      name="post_type"
      onChange={[Function]}
      required={true}
    >
      <option
        value="Text"
      >
        Text
      </option>
      <option
        value="Image"
      >
        Image
      </option>
      <option
        value="Video"
      >
        Video
      </option>
    </select>
  </div>
  <div
    className="form-fields"
  >
    <label
      htmlFor="title"
    >
      Post Title
    </label>
    <input
      id="title"
      name="title"
      placeholder="Post Title"
      type="text"
    />
    <div
      className="add-post-fields"
    >
      <label
        htmlFor="text_title"
      >
        Headline
      </label>
      <input
        aria-label="Text Headline"
        id="text_title"
        name="text_title"
        placeholder="Headline"
        type="text"
      />
      <label
        htmlFor="text_content"
      >
        Body
      </label>
      <textarea
        aria-label="Text Body"
        id="text_content"
        name="text_content"
        type="text"
      />
    </div>
  </div>
  <button
    aria-label="Submit Form"
    className="form-submit"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`EditPost component renders a form-title label in the form 1`] = `
<div
  className="form-title"
>
  <h2>
    Edit Post
  </h2>
</div>
`;

exports[`EditPost component renders a select label in the form 1`] = `
<div
  className="select"
>
  <label
    htmlFor="post_type"
  >
    Post Type
  </label>
  <select
    aria-label="Select your post type"
    id="post_type"
    name="post_type"
    onChange={[Function]}
    required={true}
  >
    <option
      value="Text"
    >
      Text
    </option>
    <option
      value="Image"
    >
      Image
    </option>
    <option
      value="Video"
    >
      Video
    </option>
  </select>
</div>
`;

exports[`EditPost component renders form fields 1`] = `
<div
  className="form-fields"
>
  <label
    htmlFor="title"
  >
    Post Title
  </label>
  <input
    id="title"
    name="title"
    placeholder="Post Title"
    type="text"
  />
  <div
    className="add-post-fields"
  >
    <label
      htmlFor="text_title"
    >
      Headline
    </label>
    <input
      aria-label="Text Headline"
      id="text_title"
      name="text_title"
      placeholder="Headline"
      type="text"
    />
    <label
      htmlFor="text_content"
    >
      Body
    </label>
    <textarea
      aria-label="Text Body"
      id="text_content"
      name="text_content"
      type="text"
    />
  </div>
</div>
`;
